# rust-lambda

./: README.md
create-contact-aws-lambda/: Cargo.toml
create-contact-aws-lambda/src/: main.rs
