[package]
name = "create-contact-aws-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
lambda_http = "0.5.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
tracing = "0.1.31"
tokio = "1.17.0"

[[bin]]
name="create-contact"
path="src/main.rs"
